Aligning Nav icon with Nav header title . Fix #TRAC-646

--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -98,7 +98,7 @@
 }
 
 .sidebar .sidebar-head h3 i {
-    font-size: 20px;
+    font-size: 1em;
 }
 
 .sidebar .open-close {
